Fixed the issue of skip-to-content button overlapping the header links

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -303,7 +303,7 @@ textarea {
 #skip-to-content {
   position: absolute;
   left: 0px;
-  top: 0px;
+  top: 40px;
   z-index: 5;
   background-color: #ed225d;
   color: white;
